tmp workaround until https://github.com/swimlane/ngx-datatable/issues/1942 is resolved

--- a/projects/swimlane/ngx-datatable/src/lib/components/datatable.component.html
+++ b/projects/swimlane/ngx-datatable/src/lib/components/datatable.component.html
@@ -18,6 +18,7 @@
     [selectionType]="selectionType"
     (sort)="onColumnSort($event)"
     (resize)="onColumnResize($event)"
+    (resizeStart)="resizeStart.emit($event)"
     (reorder)="onColumnReorder($event)"
     (select)="onHeaderSelect($event)"
     (columnContextmenu)="onColumnContextmenu($event)"
