update version to 7.3.1.

--- a/projects/swimlane/ngx-datatable/src/lib/components/datatable.component.html
+++ b/projects/swimlane/ngx-datatable/src/lib/components/datatable.component.html
@@ -22,6 +22,7 @@
         [enableClearingSortState]="enableClearingSortState"
         (sort)="onColumnSort($event)"
         (resize)="onColumnResize($event)"
+        (resizeStart)="resizeStart.emit($event)"
         (resizing)="onColumnResizing($event)"
         (reorder)="onColumnReorder($event)"
         (select)="onHeaderSelect()"
